# RustGrind

./: .gitignore  Cargo.toml  credits  deploy
html/: .editorconfig  angular.json  package-lock.json  package.json
html/src/: index.html  styles.scss
html/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  axis.ts  motor-control.service.ts  move-axis-rel.ts  on-off.pipe.ts  surface-grinder-cut-params.ts
html/src/app/manual-control/: manual-control.component.html  manual-control.component.scss  manual-control.component.ts
html/src/app/move-axis-button/: move-axis-button.component.html  move-axis-button.component.ts
html/src/app/move-axis-row/: move-axis-row.component.html  move-axis-row.component.scss  move-axis-row.component.ts
html/src/app/spindle-control-button/: spindle-control-button.component.html  spindle-control-button.component.ts
html/src/app/start-homing-button/: start-homing-button.component.html  start-homing-button.component.ts
html/src/app/stop-button/: stop-button.component.html  stop-button.component.scss  stop-button.component.ts
html/src/app/surface-cut-control/: surface-cut-control.component.html  (+1 more)
src/: common.rs  config.rs  endstop_checker.rs  main.rs  messages.rs  motor_control.rs  pins.rs  surface_grinder_cut_controller.rs  ui.rs
src/operation_controllers/: homing_controller.rs  manual_control_controller.rs  mod.rs  operation_controller.rs  operation_controller_data.rs  operation_controller_manager.rs  surface_grinder_cut_controller.rs  work_envelope.rs
(+3 files in other folders)
